[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/Dag/Run2.png" type="Texture" id=1]
[ext_resource path="res://assets/Dag/Run4.png" type="Texture" id=2]
[ext_resource path="res://assets/Dag/Run3.png" type="Texture" id=3]
[ext_resource path="res://assets/Dag/Run5.png" type="Texture" id=4]
[ext_resource path="res://assets/Dag/Idle0.png" type="Texture" id=5]
[ext_resource path="res://assets/Dag/Fall0.png" type="Texture" id=6]
[ext_resource path="res://assets/Dag/Fire2.png" type="Texture" id=7]
[ext_resource path="res://assets/Dag/Fire1.png" type="Texture" id=8]
[ext_resource path="res://assets/Dag/Run0.png" type="Texture" id=9]
[ext_resource path="res://assets/Dag/Run1.png" type="Texture" id=10]
[ext_resource path="res://assets/Dag/Jump0.png" type="Texture" id=11]
[ext_resource path="res://assets/Dag/Fire0.png" type="Texture" id=12]
[ext_resource path="res://characters/Player.gd" type="Script" id=13]
[ext_resource path="res://items/Fireball.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/direction.png" type="Texture" id=15]
[ext_resource path="res://assets/SoundEffects/fireballShoot.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/SoundEffects/stepdirt_1.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/SoundEffects/jumpland.wav" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "fire",
"speed": 10.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.0
height = 28.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 13 )
fireball = ExtResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="FireCD" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="FireDirection" type="Sprite" parent="."]
visible = false
position = Vector2( 9.53674e-07, 14 )
scale = Vector2( 0.3, 0.2 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="Position2D" type="Position2D" parent="FireDirection"]
position = Vector2( 110, 0 )

[node name="FireballShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
attenuation = 0.0

[node name="Walking" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[node name="LandJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
volume_db = 10.0
[connection signal="timeout" from="FireCD" to="." method="_on_FireCD_timeout"]
[connection signal="finished" from="Walking" to="." method="_on_Walking_finished"]
